Fix form scrollbar issues

--- a/public/stylesheets/mypa.css
+++ b/public/stylesheets/mypa.css
@@ -5,3 +5,9 @@ body {
 #page {
   margin: 0 auto !important;
 }
+
+/* Baseline.css quick fixes, I know it's ugly... */
+
+form {
+  overflow: inherit !important;
+}
